scrollbar bug

--- a/src/pages/pageCreator/style.scss
+++ b/src/pages/pageCreator/style.scss
@@ -12,7 +12,7 @@
         border-left: 0.5px solid #191A21;
     }
     &::-webkit-scrollbar-thumb {
-        background: transparent;
+        background: #42445085;
     }
     &::-webkit-scrollbar-thumb:hover {
         background: #424450;
